[package]
name = "ipr"
version = "0.1.1"
edition = "2021"
description = "A CLI to query ip region."
authors = ["linghaihui <haihuiling2014@gmail.com"]
readme = "README.md"
repository = "https://github.com/bujnlc8/ipr"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
reqwest = { version = "0.12", features = ["rustls-tls", "charset", "json"], default-features=false}
regex="1.5.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.79"
tokio = { version = "1", features = ["full"] }
colored = "2.1.0"
futures = {version = "0.3.30", default-features = false, features = ["executor"]}
xdb = { git = "https://github.com/lionsoul2014/ip2region.git", branch = "master" }
qqwry = {git = "https://github.com/sybblow/rust-qqwry.git", branch = "master"}
anyhow = "1.0.86"
ctrlc = { version = "3.4.4", features = ["termination"] }

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1
