[package]
name = "iprr"
version = "0.1.5"
edition = "2021"
description = "A CLI to query ip region."
authors = ["linghaihui <haihuiling2014@gmail.com"]
readme = "README.md"
repository = "https://github.com/bujnlc8/ipr"
categories = ["command-line-utilities"]
exclude = ["snapshot.png", "Makefile", ".ipr_config"]
keywords = ["ip-region"]
license-file = "LICENSE"

[[bin]]
name = "ipr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
reqwest = { version = "0.12", features = ["rustls-tls", "charset", "json"], default-features=false}
regex="1.5.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.79"
tokio = { version = "1", features = ["full"] }
colored = "2.1.0"
futures = {version = "0.3.30", default-features = false, features = ["executor"]}
anyhow = "1.0.86"
ctrlc = { version = "3.4.4", features = ["termination"] }
is-terminal = "0.4.12"
encoding = "0.2.33"
once_cell = "1.19.0"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1
